--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "author": "Larry Nxumalo <larry.nxumalo@afrihost.com>",
   "license": "MIT",
   "dependencies": {
-    "aos": "^3.0.0-beta.6",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean": "^0.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "standard": "^14.3.1"
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
